--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -23,6 +23,11 @@
     --error-border: #b94a48;
     --error-background: #f2dede;
 
+    --progress-closed: #6fbf58;
+    --progress-open: #f4ffa1;
+    --progress-inwork: #c6d344;
+    --progress-blocked: #ed6a2c;
+
     --input-height: 36px;
     --input-padding: 10px;
     --input-padding-none: 0;
