Move progress column to separate include file and reuse it on desktop

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -777,6 +777,10 @@ main i.fa {
     width: 90px;
 }
 
+.progressColumn {
+    width: 120px;
+}
+
 .statusColumn,
 .statusColumn div,
 .statusColumn .ui-panel-content {
