--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/desktop/processesWidget.xhtml
@@ -24,16 +24,7 @@
             <h:outputText value="#{process.title}"/>
         </p:column>
         <p:column headerText="#{msgs.status}" styleClass="process-table-column">
-            <h:graphicImage value="/pages/images/fortschritt/ende_links.gif" alt="" rendered="true"/>
-            <h:graphicImage value="/pages/images/fortschritt/gr.gif" alt="closed"
-                            style="width:#{process.progressClosed * 0.8}px;height:10px"/>
-            <h:graphicImage value="/pages/images/fortschritt/ge.gif" alt="in process"
-                            style="width:#{process.progressInProcessing * 0.8}px;height:10px"/>
-            <h:graphicImage value="/pages/images/fortschritt/go.gif" alt="open"
-                            style="width:#{process.progressOpen * 0.8}px;height:10px"/>
-            <h:graphicImage value="/pages/images/fortschritt/rt.gif" alt="locked"
-                            style="width:#{process.progressLocked * 0.8}px;height:10px"/>
-            <h:graphicImage value="/pages/images/fortschritt/ende_rechts.gif" rendered="true" alt=""/>
+            <ui:include src="/WEB-INF/templates/includes/processes/progressColumn.xhtml"/>
         </p:column>
         <p:column headerText="#{msgs.project}" styleClass="process-table-column">
             <h:outputText value="#{DesktopForm.getProject(process).title}"/>
