--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -17,57 +17,40 @@
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:p="http://primefaces.org/ui">
     <h:form id="processesForm">
-        <p:dataTable var="item"
-                     id="processesTable"
+        <p:dataTable id="processesTable"
+                     var="process"
                      value="#{ProzessverwaltungForm.lazyDTOModel}"
                      lazy="true"
                      paginator="true"
                      rows="#{LoginForm.myBenutzer.tableSize}"
                      paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                      paginatorPosition="bottom">
-            <p:column id="titleColumn" headerText="#{msgs.processTitle}" filterBy="#{item.title}">
-                <h:outputText value="#{item.title}"/>
+            <p:column id="titleColumn" headerText="#{msgs.processTitle}" filterBy="#{process.title}">
+                <h:outputText value="#{process.title}"/>
             </p:column>
-            <p:column style="width:120px;" headerText="#{msgs.status}">
-                <h:panelGroup id="processProgress"
-                              styleClass="processProgress"
-                              title="#{msgs.progress}"
-                              style="
-                                display: block;
-                                width: 110px;
-                                height: 16px;
-                                border-radius: 1px;
-                                background-image: linear-gradient(
-                                    to right,
-                                    var(--progress-closed),
-                                    var(--progress-closed) #{item.progressClosed}%,
-                                    var(--progress-open) #{item.progressClosed}%,
-                                    var(--progress-open) #{item.progressOpen + item.progressClosed}%,
-                                    var(--progress-inwork) #{item.progressOpen + item.progressClosed}%,
-                                    var(--progress-inwork) #{item.progressOpen + item.progressClosed + item.progressInProcessing}%,
-                                    var(--progress-blocked) #{item.progressOpen + item.progressClosed + item.progressInProcessing}%);"
-                />
+            <p:column id="progressColumn" styleClass="progressColumn" headerText="#{msgs.status}">
+                <ui:include src="/WEB-INF/templates/includes/processes/progressColumn.xhtml"/>
             </p:column>
             <p:column headerText="#{msgs.project}">
-                <h:outputText value="#{item.project.title}"/>
+                <h:outputText value="#{process.project.title}"/>
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                 <h:link id="editProcess"
                         outcome="/pages/processEdit"
                         title="#{msgs.processEdit}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
-                    <f:param name="id" value="#{item.id}"/>
+                    <f:param name="id" value="#{process.id}"/>
                 </h:link>
                 <h:commandLink id="readXML" action="#{Metadaten.readXml}" title="#{msgs.metadataEdit}">
                     <h:outputText><i class="fa fa-file-o"/></h:outputText>
-                    <f:param name="ProzesseID" value="#{item.id}"/>
+                    <f:param name="ProzesseID" value="#{process.id}"/>
                     <f:param name="BenutzerID" value="#{LoginForm.myBenutzer.id}"/>
                     <f:param name="zurueck" value="processList"/>
                     <f:setPropertyActionListener value="processes" target="#{Metadaten.referringView}"/>
                     <f:actionListener binding="#{Metadaten.setCorrectionComment(false)}"/>
                     <f:actionListener binding="#{Metadaten.setShowNewComment(false)}"/>
                 </h:commandLink>
-                <h:commandLink action="#{ProzessverwaltungForm.exportMets(item.id)}" id="exportMets" title="#{msgs.exportMets}">
+                <h:commandLink action="#{ProzessverwaltungForm.exportMets(process.id)}" id="exportMets" title="#{msgs.exportMets}">
                     <h:outputText><i class="fa fa-file-code-o"/></h:outputText>
                 </h:commandLink>
                 <p:commandLink id="deleteProcess"
@@ -75,7 +58,7 @@
                                title="#{msgs.delete}"
                                update="processesTabView:processesForm:processesTable">
                     <h:outputText><i class="fa fa-trash-o"/></h:outputText>
-                    <f:setPropertyActionListener value="#{item.id}" target="#{ProzessverwaltungForm.processByID}"/>
+                    <f:setPropertyActionListener value="#{process.id}" target="#{ProzessverwaltungForm.processByID}"/>
                     <p:confirm header="#{msgs.confirmDelete}"
                                message="#{msgs.confirmDeleteProcess}"
                                icon="ui-icon-alert"/>
