Add delete functionality to workflow page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -51,6 +51,14 @@
 
                     <h:link><i class="fa fa-clipboard fa-lg"/></h:link>
                     <h:link><i class="fa fa-clone fa-lg"/></h:link>
+
+                    <p:commandLink id="deleteWorkflow" action="#{WorkflowForm.delete}"
+                                   title="#{msgs.delete}" update="projectsTabView:workflowTable">
+                        <h:outputText><i class="fa fa-trash-o"/></h:outputText>
+                        <f:setPropertyActionListener value="#{item.id}" target="#{WorkflowForm.workflowById}"/>
+                        <p:confirm header="#{msgs.confirmDelete}" message="#{msgs.confirmDeleteWorkflow}"
+                                   icon="ui-icon-alert"/>
+                    </p:commandLink>
                 </h:form>
             </h:outputText>
         </p:column>
