--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/recordImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/recordImport.xhtml
@@ -21,7 +21,7 @@
         <p:row>
             <div>
                 <h:outputText value="#{msgs.project}:"/>
-                <h:outputText value="#{MassImportForm.template.project.title}"/>
+                <h:outputText value="#{MassImportForm.project.title}"/>
             </div>
 
             <div>
