Fixes in messages

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/recordImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/recordImport.xhtml
@@ -36,7 +36,7 @@
 
         <p:row>
             <div>
-                <p:outputLabel for="recordImportPlugins" value="#{msgs.importplugin}:"/>
+                <p:outputLabel for="recordImportPlugins" value="#{msgs.importPlugin}:"/>
                 <p:selectOneMenu id="recordImportPlugins" value="#{MassImportForm.currentPlugin}">
                     <!-- TODO: find other way to include it -->
                     <!--<f:ajax event="change" render="formupload"/>-->
