--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/uploadImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/uploadImport.xhtml
@@ -43,7 +43,7 @@
 
         <p:row>
             <div>
-                <p:outputLabel for="uploadImportPlugins" value="#{msgs.importplugin}:"/>
+                <p:outputLabel for="uploadImportPlugins" value="#{msgs.importPlugin}:"/>
                 <p:selectOneMenu id="uploadImportPlugins" value="#{MassImportForm.currentPlugin}">
                     <!-- TODO: find other way to include it -->
                     <!--<f:ajax event="change" render="formupload"/>-->
