--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/header.xhtml
@@ -17,7 +17,7 @@
         xmlns:p="http://primefaces.org/ui">
     <p:panel styleClass="content-header">
         <h3>
-            <h:outputText value="#{msgs.metadatenBearbeiten} (#{Metadaten.process.title})"/>
+            <h:outputText value="#{msgs.metadataEdit} (#{Metadaten.process.title})"/>
         </h3>
         <p:commandButton id="save"
                          widgetVar="save"
