--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -82,7 +82,7 @@
                     <h:outputText value="#{msgs.internFileFormat}:"/>
                     <h:outputText value="#{item.fileFormatInternal}"/>
 
-                    <h:outputText value="#{msgs.dmsExportformat}:"/>
+                    <h:outputText value="#{msgs.dmsExportFormat}:"/>
                     <h:outputText value="#{item.fileFormatDmsExport}"/>
 
                     <h:outputText value="#{msgs.metsRightsOwner}:"/>
