--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/idImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/massImport/idImport.xhtml
@@ -35,7 +35,7 @@
 
         <p:row>
             <div>
-                <p:outputLabel for="idImportPlugins" value="#{msgs.importplugin}:"/>
+                <p:outputLabel for="idImportPlugins" value="#{msgs.importPlugin}:"/>
                 <p:selectOneMenu id="idImportPlugins" value="#{MassImportForm.currentPlugin}">
                     <!-- TODO: find other way to include it -->
                     <!--<f:ajax event="change" render="formupload"/>-->
