--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexingRow.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/system/indexingRow.xhtml
@@ -17,7 +17,7 @@
                 xmlns:p="http://primefaces.org/ui">
     <h:panelGroup rendered="#{objectType ne indexingForm.noneType}">
         <tr>
-            <td>#{objectType.translation}</td>
+            <td>#{objectType.translationPlural}</td>
             <td>
                 <p:commandButton widgetVar="startIndexing#{objectType}"
                                  rendered="#{SecurityAccessController.isAdminOrHasAuthorityGlobal('editIndex')}"
